# harness-core

./: .mailmap  README.md  WORKSPACE  bazelrc.common  build.properties
120-ng-manager/: config.yml
260-delegate/: module-dependency.hash
270-delegate-service-app/: delegate-service-config.yml  module-dependency.hash
280-batch-processing/: batch-processing-config.yml
310-ci-manager/: ci-manager-config.yml
320-ci-execution/: BUILD.bazel
332-ci-manager/config/: ci-manager-config.yml
360-cg-manager/: config.yml
400-rest/: BUILD.bazel
800-pipeline-service/: BUILD.bazel  config.yml
820-platform-service/container/: BUILD.bazel
925-access-control-service/: config.yml
958-debezium-engine/: BUILD.bazel
958-debezium-engine/src/main/java/io/debezium/embedded/: EmbeddedEngineChangeEvent.java
958-debezium-engine/src/main/java/io/harness/debezium/: ChangeConsumer.java  DebeziumController.java  MongoOffsetBackingStore.java  MongoReconciliationOffset.java
970-api-services-beans/: BUILD.bazel
access-control/container/: Dockerfile-accesscontrol-service-jenkins-k8-gcr-openjdk  Dockerfile-accesscontrol-service-jenkins-k8-openjdk
dockerization/delegate-proxy/: setup.sh
dockerization/manager/: Dockerfile-manager-jenkins-k8-gcr  Dockerfile-manager-jenkins-k8-gcr-openjdk
dockerization/platform-service/: Dockerfile-platform-service-jenkins-k8-gcr-openjdk  Dockerfile-platform-service-jenkins-k8-openjdk
on-prem/disconnected_on_prem_pov_installer/: generate.sh
on-prem/dockerless_pov_installer_generator/: generate_installer.sh
project/: main_maven_install.json
(+1143 files in other folders)
