load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:io_debezium_debezium_api",
        "@maven//:io_debezium_debezium_connector_mongodb",
        "@maven//:io_debezium_debezium_core",
        "@maven//:io_debezium_debezium_embedded",
        "@maven//:org_apache_kafka_connect_api",
        "@maven//:org_apache_kafka_connect_runtime",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:ru_vyarus_guice_validator",
    ],
)

run_analysis()
